gitops/infra/addons/sonarqube/test/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-test
  namespace: sonarqube
spec:
  ports:
  - nodePort: 30433
    port: <db port>
    protocol: TCP
    targetPort: <db port>
  selector:
    app: postgres-test
  sessionAffinity: None
  type: NodePort
