gitops/infra/addons/sonarqube/test/sonarqube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-test
  namespace: sonarqube
spec:
  ingressClassName: default
  rules:
  - host: sonarqube2.dev.re.kr
    http:
      paths:
      - backend:
          service:
            name: sonarqube-minimal-service-test
            port:
              number: 9000
        path: /
        pathType: Prefix
