gitops/infra/addons/sonarqube/test/sonarqube-minimal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube-minimal-test
  namespace: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube-minimal-test
  template:
    metadata:
      labels:
        app: sonarqube-minimal-test
    spec:
      containers:
      - env:
        - name: SONAR_JDBC_URL
          value: jdbc:postgresql://postgres-service-test:<db port>/sonar
        - name: SONAR_JDBC_USERNAME
          value: sonar
        - name: SONAR_JDBC_PASSWORD
          value: sonar
        image: <harbor repository_url>/gitlab-ci/sonar:25.10.0.114319-community				
        imagePullPolicy: IfNotPresent
        name: sonarqube
        ports:
        - containerPort: 9000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: harbor-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
