gitops/infra/addons/sonarqube/test/sonarqube-minimal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-minimal-service-test
  namespace: sonarqube
spec:
  ports:
  - name: gradle
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: sonarqube-minimal-test
  sessionAffinity: None
  type: ClusterIP
